<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailMovieTvActivity"
    android:background="#070D2D">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarGroup"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="#000A43"
            app:expandedTitleMarginStart="20dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/backdrop_image_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/poster_a_start_is_born"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/backdrop_image" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:background="@drawable/title_background"
                app:titleTextAppearance="@style/Toolbar.TitleText"
                />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:contentInsetStart="0dp"
                app:title="@string/app_name"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Platform.MaterialComponents.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollviewGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:paddingStart="20dp"
            android:orientation="vertical"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="130dp"
                    android:layout_height="165dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <ImageView
                        android:id="@+id/poster_image_detail"
                        android:layout_width="130dp"
                        android:layout_height="165dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/poster_a_start_is_born"
                        android:contentDescription="@string/image_movie_tv" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/born_as_a_star"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:fontFamily="sans-serif-condensed"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/genre_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/action_advanture_music"
                        android:textColor="#888BA5"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="13dp"
                        >

                        <TextView
                            android:id="@+id/year_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_2019"
                            android:background="@drawable/background_tag"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:layout_marginEnd="5dp"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:textColor="@color/white"
                            android:fontFamily="sans-serif-condensed"
                            android:textSize="16sp"/>

                        <TextView
                            android:id="@+id/duration_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_3h_30min"
                            android:background="@drawable/background_tag"
                            android:paddingTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:paddingBottom="5dp"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:textColor="@color/white"
                            android:fontFamily="sans-serif-condensed"
                            android:textSize="16sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        >

                        <TextView
                            android:id="@+id/language_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/en"
                            android:background="@drawable/background_tag"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:layout_marginEnd="15dp"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:textColor="@color/white"
                            android:fontFamily="sans-serif-condensed"
                            android:textSize="16sp"/>

                        <TextView
                            android:id="@+id/star_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_4_8"
                            android:drawablePadding="5dp"
                            android:background="@drawable/background_tag"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:layout_marginEnd="5dp"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:textColor="@color/white"
                            android:fontFamily="sans-serif-condensed"
                            android:textSize="16sp"
                            app:drawableStartCompat="@drawable/star_icon" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/synopsis"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="6dp"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/synopsis_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/white"
                android:justificationMode="inter_word"
                android:textSize="17sp"
                android:layout_marginStart="6dp"
                android:fontFamily="sans-serif-condensed"
                tools:targetApi="o" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>