<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_movies"
        android:icon="@drawable/movie_icon"
        android:title="@string/movies"/>

    <item
        android:id="@+id/nav_tv"
        android:icon="@drawable/tv_icon"
        android:title="@string/tv_show"/>

</menu>